# fetch-server

./: Cargo.toml  diesel.toml
migrations/2022-02-17-062647_comment/: down.sql  up.sql
migrations/2022-02-23-034816_metadata/: up.sql
src/: controllers.rs  database.rs  lib.rs  main.rs  models.rs
src/controllers/: comments_controller.rs
src/database/: schema.rs
src/models/: comments.rs  media.rs
