[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "^1.4.8", features = ["postgres", "r2d2", "chrono", "uuidv07", "numeric", "serde_json"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1"
uuid = { version = "^0.8", features = ["serde", "v4"] }
chrono = {versioon = "0.4", features = ["serde", "rustc-serialize"]}
persistent = "0.4.0"
bodyparser = "0.8.0"