[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = "1"
uuid = { version = "^0.8", features = ["serde", "v4"] }
chrono = {versioon = "0.4", features = ["serde", "rustc-serialize"]}
persistent = "0.4.0"
bodyparser = "0.8.0"
tokio = "1"
mongodb = "2"
bson = { version = "2.1.0", features = ["chrono-0_4"] }
env_logger = "0.9.0"